--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 					</div>
 					<div class="nav--2">
 						<ul class="navbar1__ul cursorpoint">
-							<li class="navbar1__ul--li cursorpoint "><a href="" >Works</a></li>
-							<li class="navbar1__ul--li cursorpoint"><a href="https://hoanglvgd.github.io/" >About</a></li>
-							<li class="navbar1__ul--li cursorpoint"><a href="" >Contact</a></li>
+							<li class="navbar1__ul--li cursorpoint "><a href="https://portfolio-hoanglv1999-works.github.io/" >Works</a></li>
+							<li class="navbar1__ul--li cursorpoint"><a href="https://portfolio-hoanglv1999-about.github.io/" >About</a></li>
+							<li class="navbar1__ul--li cursorpoint"><a href="https://portfolio-hoanglv1999-contact.github.io/" >Contact</a></li>
 						</ul>
 					</div>
 					<div class="nav--3">
@@ -77,7 +77,7 @@
 						<hr></div>
 
 					<span data-aos="fade-left"  data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="500" class=" cursorpoint ">
-						<a href="">
+						<a href="https://portfolio-hoanglv1999-works.github.io/">
 						<h3 class="content2__inner--span hover--translate ">Xem tất cả các hoạt động của tôi <i class="fa fa-arrow-up fa-rotate-45"></i></h3>
 						</a>
 					</span>	
