--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="content1__navbar1 slide-in-fwd-bottom">
 				<div class="content1__navbar1--nav paddingnoidunglai" >
 					<div class="nav--1">
-						<span><a href=""><img class="logo content1__navbar1--marginelement" src="Asset 1.png"></a></span>
+						<span><a href="https://portfolio-hoanglv1999.github.io/"><img class="logo content1__navbar1--marginelement" src="Asset 1.png"></a></span>
 					</div>
 					<div class="nav--2">
 						<ul class="navbar1__ul cursorpoint">
