--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>TRANG CHỦ- PORTFOLIO</title>
 	<link rel="stylesheet" type="text/css" href="Untitled-2.css" >
+		<link rel="icon" href="Asset 1.png" type="image/x-icon"> 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
