--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 				  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+		<meta property=’og:image’ content='https://scontent.fsgn5-5.fna.fbcdn.net/v/t1.6435-9/143891219_1748216312005511_4419045822544405286_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=5H8wqiuo49cAX8Q05mj&_nc_ht=scontent.fsgn5-5.fna&oh=34d7d015f15841438997c5ef651a1557&oe=616B025E'/>
+		<meta property=’og:description’ content='HoangLe Portfolio'>
+		<meta property=’og:url’ content='https://portfolio-hoanglv1999.github.io/'/>
+		<meta property='og:image:width' content='1200' />
+		<meta property='og:image:height' content='627' />
 </head>
 
 <body>
@@ -28,9 +33,9 @@
 					</div>
 					<div class="nav--2">
 						<ul class="navbar1__ul cursorpoint">
-							<li class="navbar1__ul--li cursorpoint "><a href="https://portfolio-hoanglv1999-works.github.io/" >Works</a></li>
-							<li class="navbar1__ul--li cursorpoint"><a href="https://portfolio-hoanglv1999-about.github.io/" >About</a></li>
-							<li class="navbar1__ul--li cursorpoint"><a href="https://portfolio-hoanglv1999-contact.github.io/" >Contact</a></li>
+							<li class="navbar1__ul--li cursorpoint "><a target="_blank" href="https://portfolio-hoanglv1999-works.github.io/" >Works</a></li>
+							<li class="navbar1__ul--li cursorpoint"><a target="_blank" href="https://portfolio-hoanglv1999-about.github.io/" >About</a></li>
+							<li class="navbar1__ul--li cursorpoint"><a target="_blank" href="https://portfolio-hoanglv1999-contact.github.io/" >Contact</a></li>
 						</ul>
 					</div>
 					<div class="nav--3">
@@ -78,7 +83,7 @@
 						<hr></div>
 
 					<span data-aos="fade-left"  data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="500" class=" cursorpoint ">
-						<a href="https://portfolio-hoanglv1999-works.github.io/">
+						<a target="_blank" href="https://portfolio-hoanglv1999-works.github.io/">
 						<h3 class="content2__inner--span hover--translate ">Xem tất cả các hoạt động của tôi <i class="fa fa-arrow-up fa-rotate-45"></i></h3>
 						</a>
 					</span>	
@@ -122,9 +127,9 @@
 				<div data-aos="fade-up" data-aos-anchor-placement="center-bottom"  class="contactinforbenngoai">
 					<div class="contactinfor">
 						<span><h2 class="liststyle">VN:0338341000</h2></span>
-						<span class="cursorpoint hover--orangeredcolor"><a class="hover--orangeredcolor" href="https://www.facebook.com/iqvocuc/"><h2 class="liststyle" >Facebook</h2></a></span>
-						<span class="cursorpoint hover--orangeredcolor"><a class="hover--orangeredcolor" href="https://www.instagram.com/llevi_h/"><h2 class="liststyle">Instagram</h2></a></span>
-						<span class="cursorpoint hover--orangeredcolor"><a class="hover--orangeredcolor" href="https://www.behance.net/gallery/123930909/D-an-SEM-1-B-nhn-din-thuong-hiuthi-trang-GAMUS"><h2 class="liststyle">Behance</h2></a></span>
+						<span class="cursorpoint hover--orangeredcolor"><a target="_blank" class="hover--orangeredcolor" href="https://www.facebook.com/iqvocuc/"><h2 class="liststyle" >Facebook</h2></a></span>
+						<span class="cursorpoint hover--orangeredcolor"><a target="_blank" class="hover--orangeredcolor" href="https://www.instagram.com/llevi_h/"><h2 class="liststyle">Instagram</h2></a></span>
+						<span class="cursorpoint hover--orangeredcolor"><a target="_blank" class="hover--orangeredcolor" href="https://www.behance.net/gallery/123930909/D-an-SEM-1-B-nhn-din-thuong-hiuthi-trang-GAMUS"><h2 class="liststyle">Behance</h2></a></span>
 				</div>
 				</div>
 				
