--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 				  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-		<meta property=’og:image’ content='https://scontent.fsgn5-5.fna.fbcdn.net/v/t1.6435-9/143891219_1748216312005511_4419045822544405286_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=5H8wqiuo49cAX8Q05mj&_nc_ht=scontent.fsgn5-5.fna&oh=34d7d015f15841438997c5ef651a1557&oe=616B025E'/>
+
+		<meta property=’og:image’ content='anhdetrenfb.png'/>
 		<meta property=’og:description’ content='HoangLe Portfolio'>
 		<meta property=’og:url’ content='https://portfolio-hoanglv1999.github.io/'/>
 		<meta property='og:image:width' content='1200' />
