--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 				  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-		<meta property=’og:image’ content='anhdetrenfb.png'/>
-		<meta property=’og:description’ content='HoangLe Portfolio'>
+		<meta property=’og:image’ content='https://scontent.fsgn5-2.fna.fbcdn.net/v/t1.6435-9/241390305_1916169888543485_8657050334883211154_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=730e14&_nc_ohc=f8-yhixufOgAX81QO_J&_nc_ht=scontent.fsgn5-2.fna&oh=ec290f857982e5d7d8471b7c4b1afe3a&oe=616AEB4E'/>
+		<meta property=’og:description’ content='HoangLe Portfolio' />
 		<meta property=’og:url’ content='https://portfolio-hoanglv1999.github.io/'/>
 		<meta property='og:image:width' content='1200' />
 		<meta property='og:image:height' content='627' />
